Change format of copia file parsing to Infinity or Genesis

--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,6 @@ WHISPER_COMMAND_PARAMS="--translate"
 APP_UNC_PATH="\\\\mission-control\\"
 
 INBOUND_EMAIL_DAYS_TO_KEEP=30
+
+# Infinity+IS user?
+#APP_SWITCH_ENGINE=infinity
