--- a/.env.example
+++ b/.env.example
@@ -67,6 +67,11 @@ STRIPE_KEY=your-stripe-key
 STRIPE_SECRET=your-stripe-secret
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
 
+# Twilio API credentials for WCTP to SMS forwarding
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_FROM_NUMBER=
+
 
 #WHISPER_MODEL="ggml-base-q5_0.bin"
 #WHISPER_MODEL="ggml-base-q5_0.bin"
