Voicemail Digest utility, updates to MCP for http transport (dropping SSE), and various qol interface improvements

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_HOST=localhost
 APP_URL="http://${APP_HOST}"
+APP_SERVICE=mission-control.test
 
 BOARD_CHECK_STARTING_CALLID=335428
 
