--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "wavesurfer.js": "^7.12.1"
     },
     "dependencies": {
+        "@codemirror/lang-json": "^6.0.2",
+        "@codemirror/lang-xml": "^6.1.0",
+        "@codemirror/state": "^6.5.4",
+        "@codemirror/theme-one-dark": "^6.1.3",
+        "codemirror": "^6.0.2",
         "puppeteer": "^24.36.0"
     }
 }
