--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     "require-dev": {
         "brianium/paratest": "^7.10",
         "fakerphp/faker": "^1.24.1",
+        "larastan/larastan": "^3.0",
         "laravel/sail": "^1.43.0",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.8.0",
